repository/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soya
spec:
  replicas: 2
  selector:
    matchLabels:
      app: soya
  template:
    metadata:
      labels:
        app: soya
    spec:
      containers:
      - name: soya
        image: oydeu/soya-base:latest
        ports:
        - containerPort: 3000
