repository/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: soya
spec:
  selector:
    app: soya
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
