repository/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soya
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - soya.ownyourdata.eu
    secretName: soya-tls
  rules:
  - host: soya.ownyourdata.eu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: soya
            port:
              number: 80
